--- a/content/2110930_parks.md
+++ b/content/2110930_parks.md
@@ -6,16 +6,16 @@ author: Dane Collins
 Summary: Starting a tour of California State Parks
 
 
-Since we got our class b camper I decided that we need to spend more time visiting the 280 California State Parks.  It seems like we have visited a lot of them but really, we have seen almost none, especially recently.  Two hundred and eighty parks is a lot of parks and, much like visiting Wyland Walls it will lead us to many places that we would not visit otherwise.
+Since we got our class b camper I decided that we need to spend more time visiting the 280 California State Parks.  It seems like we have visited many parks but really, we have seen almost none, especially recently.  Two hundred and eighty parks is a lot of parks and, much like visiting Wyland Walls it will lead us to many places we would not visit otherwise.
 
-So far, we have focused on visiting the state beaches on the coast from Santa Cruz to San Francisco.  Most of these are beautiful beaches along the California coast but with little differentiation. Some have some trails and some like Garrapata have a beautiful path along the coast.
+So far, we have focused on visiting the state beaches on the coast from Santa Cruz to San Francisco.  Most of these are beautiful beaches along the California coast but with little differentiation. Some have trails and some like Garrapata have a beautiful path along the coast.
 
-Much like Wyland Walls, in the early days of our journey it is easy to visit many parks in a single day.  To date we have visited 28 parks including:
+Like with Wyland Walls, in the early days of our journey it is easy to visit many parks in a single day.  To date, we have visited 28 parks including:
 
 * Anderson Marsh State Historic Park
 * Andrew Molera State Park
 * Bean Hollow State Beach
-* Clear Lake State Park -- The Keysel Campground is right on the lake.  Overall a great campground. 
+* Clear Lake State Park
 * Garrapata State Park -- This park has one of the most beautiful walking paths of the Big Sur coast.  If you were to walk in only one place on the coast I'd pick this one.
 * Half Moon Bay State Beach
 * Henry Cowell Redwoods State Park
@@ -41,4 +41,10 @@ Much like Wyland Walls, in the early days of our journey it is easy to visit man
 * Wilder Ranch State Park
 * Zmudowski State Beach
 
-As we work to see more oarks I'm such many adventures are to come.
+Some of these parks are campgrounds and justify additional comments
+
+* Clear Lake -- The Kelsey Campground is right on the lake.  Overall a great campground. 
+* Half Moon Bay -- Walking distance to downtown and right on the bike trail.
+* Pfeiffer Big Sur -- In the redwoods and right on the river.
+
+As we work to see more parks I'm such many adventures are to come.
